feat(governance): enforce explicit CLI termination operations